# pyshell

./: README.md  pyproject.toml
pyshell/: __init__.py
tests/: testPyShell.py
